Make all .env variables available to the ansible playbook and use the same casing for variable definitions in the playbook

--- a/local.yml
+++ b/local.yml
@@ -125,10 +125,9 @@
 
     - name: Install and configure `msmtp` to be used by Cron and other services to send emails
       vars:
-        from_email_address: 'server@{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
-        email_address: '{{ lookup("env", "EMAIL_ADDRESS") }}'
-        smtp_host: '{{ lookup("env", "SMTP_HOST") }}'
-        smtp_port: '{{ lookup("env", "SMTP_PORT") }}'
+        FROM_EMAIL_ADDRESS: 'server@{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
+        SMTP_HOST: '{{ lookup("env", "SMTP_HOST") }}'
+        SMTP_PORT: '{{ lookup("env", "SMTP_PORT") }}'
       block:
         - name: Uninstall `mailutils` which includes GNU `mail`
           # The problem with GNU `mail` combined with `msmtp` is that aliases
@@ -180,7 +179,7 @@
           vars:
             # The system-wide logfile must be `/var/log/msmtp` according to
             # msmtp's AppArmor configuration `/etc/apparmor.d/usr.bin.msmtp`
-            msmtp_logfile: /var/log/msmtp
+            MSMTP_LOGFILE: /var/log/msmtp
           template:
             src: msmtprc.j2
             dest: /etc/msmtprc
@@ -193,7 +192,7 @@
           vars:
             # The user-specific logfile must be `~/.msmtp*.log` according to
             # msmtp's AppArmor configuration `/etc/apparmor.d/usr.bin.msmtp`
-            msmtp_logfile: ~/.msmtp.log
+            MSMTP_LOGFILE: ~/.msmtp.log
           template:
             src: msmtprc.j2
             dest: ~/.msmtprc
@@ -202,6 +201,8 @@
 
         - name: Copy `aliases` configuration file
           become: yes
+          vars:
+            EMAIL_ADDRESS: '{{ lookup("env", "EMAIL_ADDRESS") }}'
           template:
             src: aliases.j2
             dest: /etc/aliases
@@ -259,14 +260,14 @@
     - name: Monitor system with Monit
       # https://mmonit.com/monit/
       vars:
-        production_host: '{{ lookup("env", "PRODUCTION_HOST") }}'
-        non_www_production_host: '{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
-        staging_host: '{{ lookup("env", "STAGING_HOST") }}'
-        email_address: '{{ lookup("env", "EMAIL_ADDRESS") }}'
-        smtp_host: '{{ lookup("env", "SMTP_HOST") }}'
-        smtp_port: '{{ lookup("env", "SMTP_PORT") }}'
-        network_interface: '{{ lookup("env", "NETWORK_INTERFACE") }}'
-        monit_password: '{{ lookup("env", "MONIT_PASSWORD") }}'
+        PRODUCTION_HOST: '{{ lookup("env", "PRODUCTION_HOST") }}'
+        NON_WWW_PRODUCTION_HOST: '{{ lookup("env", "NON_WWW_PRODUCTION_HOST") }}'
+        STAGING_HOST: '{{ lookup("env", "STAGING_HOST") }}'
+        EMAIL_ADDRESS: '{{ lookup("env", "EMAIL_ADDRESS") }}'
+        SMTP_HOST: '{{ lookup("env", "SMTP_HOST") }}'
+        SMTP_PORT: '{{ lookup("env", "SMTP_PORT") }}'
+        NETWORK_INTERFACE: '{{ lookup("env", "NETWORK_INTERFACE") }}'
+        MONIT_PASSWORD: '{{ lookup("env", "MONIT_PASSWORD") }}'
       block:
         - name: Add Debian backports
           # https://backports.debian.org/
