--- a/local.yml
+++ b/local.yml
@@ -428,7 +428,7 @@
 
         - name: Install OpenTelemetry Collector
           apt:
-            deb: https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.144.0/otelcol_0.144.0_linux_386.deb
+            deb: https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.144.0/otelcol_0.144.0_linux_amd64.deb
 
         - name: Copy OpenTelemetry Collector configuration file
           become: yes
