--- a/telemetry/open-telemetry-collector-config.yml
+++ b/telemetry/open-telemetry-collector-config.yml
@@ -23,16 +23,15 @@ receivers:
   journald:
     directory: /var/log/journal
     start_at: end
-    storage: file_storage/journald
     priority: info
-  prometheus:
-    config:
-      global:
-        scrape_interval: 30s
-      scrape_configs:
-        - job_name: otel-collector-binary
-          static_configs:
-            - targets: ['localhost:8888']
+  # prometheus:
+  #   config:
+  #     global:
+  #       scrape_interval: 30s
+  #     scrape_configs:
+  #       - job_name: otel-collector-binary
+  #         static_configs:
+  #           - targets: ['localhost:8888']
 
 processors:
   batch:
@@ -47,30 +46,26 @@ processors:
 extensions:
   health_check: {}
   # zpages: {}
-  file_storage/journald:
-    directory: .
 
 exporters:
   otlp:
-    endpoint: localhost:4317"
+    endpoint: localhost:4317
     tls:
       insecure: true
-  logging:
-    # verbosity of the logging export: detailed, normal, basic
-    verbosity: normal
+  debug:
+    verbosity: detailed
 
 service:
   telemetry:
     metrics:
-      address: 0.0.0.0:8888
-  extensions: [health_check, zpages, file_storage/journald]
+  extensions: [health_check] # zpages
   pipelines:
     metrics:
       receivers: [otlp]
       processors: [batch]
       exporters: [otlp]
     metrics/internal:
-      receivers: [prometheus, hostmetrics]
+      receivers: [hostmetrics] # prometheus
       processors: [resourcedetection, batch]
       exporters: [otlp]
     traces:
