--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -66,6 +66,12 @@ server {
         proxy_pass http://host.docker.internal:${PRODUCTION_HTTP_PORT};
     }
 
+    location /telemetry {
+        # auth_basic "Restricted Area";
+        # auth_basic_user_file /etc/apache2/.htpasswd;
+        proxy_pass http://host.docker.internal:${TELEMETRY_PORT};
+    }
+
     location /monit {
         auth_basic "Restricted Area";
         auth_basic_user_file /etc/apache2/.htpasswd;
