--- a/.env.buildingenvelopedata.sample
+++ b/.env.buildingenvelopedata.sample
@@ -8,6 +8,7 @@ NON_WWW_PRODUCTION_HOST=buildingenvelopedata.org
 STAGING_HTTP_PORT=9000
 STAGING_HOST=staging.buildingenvelopedata.org
 
+TELEMETRY_HOST=telemetry.buildingenvelopedata.org
 EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
