--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ NON_WWW_PRODUCTION_HOST=sample.org
 STAGING_HTTP_PORT=9000
 STAGING_HOST=staging.sample.org
 
+TELEMETRY_HOST=telemetry.sample.org
 EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
 
 EMAIL_ADDRESS=john.doe@sample.org
