--- a/.env.solarbuildingenvelopes.sample
+++ b/.env.solarbuildingenvelopes.sample
@@ -8,6 +8,7 @@ NON_WWW_PRODUCTION_HOST=solarbuildingenvelopes.com
 STAGING_HTTP_PORT=9000
 STAGING_HOST=staging.solarbuildingenvelopes.com
 
+TELEMETRY_HOST=telemetry.solarbuildingenvelopes.com
 EXTRA_HOST=192-102-162-39.vm.c.fraunhofer.de
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
