--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -66,12 +66,6 @@ server {
         proxy_pass http://host.docker.internal:${PRODUCTION_HTTP_PORT};
     }
 
-    location /telemetry {
-        # auth_basic "Restricted Area";
-        # auth_basic_user_file /etc/apache2/.htpasswd;
-        proxy_pass http://host.docker.internal:${TELEMETRY_PORT};
-    }
-
     location /monit {
         auth_basic "Restricted Area";
         auth_basic_user_file /etc/apache2/.htpasswd;
@@ -118,5 +112,17 @@ server {
     location /.well-known/acme-challenge/ {
         auth_basic "off";
         root /var/www/certbot;
+    }
+}
+
+server {
+    listen *:443 ssl;
+    server_name ${TELEMETRY_HOST};
+    server_tokens off;
+
+    location / {
+        # auth_basic "Restricted Area";
+        # auth_basic_user_file /etc/apache2/.htpasswd;
+        proxy_pass http://host.docker.internal:${TELEMETRY_PORT};
     }
 }
