--- a/local.yml
+++ b/local.yml
@@ -1,35 +1,49 @@
-- hosts: localhost
+---
+- name: Setup Machine
+  hosts: localhost
   connection: local
 
   handlers:
     - name: Restart Docker
-      become: yes
-      service:
+      become: true
+      ansible.builtin.service:
         name: docker
         state: restarted
 
     - name: Reload Monit
-      become: yes
-      service:
+      become: true
+      ansible.builtin.service:
         name: monit
         state: reloaded
 
     - name: Reload OpenTelemetry Collector
-      become: yes
-      service:
+      become: true
+      ansible.builtin.service:
         name: otelcol-contrib
         state: reloaded
 
     - name: Send test email as root
-      become: yes
-      shell: echo "Test email as root user from new/updated MSTMP at" `hostname` | mail -s "Test SMTP `hostname`" root
+      become: true
+      ansible.builtin.shell:
+        cmd: |
+          set -o pipefail
+          echo "Test email as root user from new/updated MSTMP at" `hostname` \
+            | mail -s "Test SMTP `hostname`" root
+        executable: /bin/bash
+      changed_when: false
 
     - name: Send test email as cloud
-      shell: echo "Test email as cloud user from new/updated MSTMP at" `hostname` | mail -s "Test SMTP `hostname`" cloud
+      ansible.builtin.shell:
+        cmd: |
+          set -o pipefail
+          echo "Test email as cloud user from new/updated MSTMP at" `hostname` \
+            | mail -s "Test SMTP `hostname`" cloud
+        executable: /bin/bash
+      changed_when: false
 
   pre_tasks:
     - name: Ensure environment variables used below are set
-      assert:
+      ansible.builtin.assert:
         that:
           - lookup('env', item) | length > 0
         fail_msg: "The environment variable '{{ item }}' is not set."
@@ -45,111 +59,115 @@
         - MONIT_PASSWORD
 
     - name: Update package information
-      become: yes
-      apt:
-        update_cache: yes
+      become: true
+      ansible.builtin.apt:
+        update_cache: true
       changed_when: false
 
     - name: Install access control list utilities (needed to escalate privileges, see https://github.com/ansible/ansible/issues/16052)
-      become: yes
-      package:
+      become: true
+      ansible.builtin.package:
         name: acl
         state: present
 
   post_tasks:
     - name: Clean (Advanced Package Tool) APT cache and remove unused dependencies
-      become: yes
-      apt:
-        clean: yes
-        autoremove: yes
-        autoclean: yes
+      become: true
+      ansible.builtin.apt:
+        clean: true
+        autoremove: true
+        autoclean: true
 
   tasks:
     - name: Bash completion
       block:
         - name: Install Bash completion
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: bash-completion
             state: present
 
         # Inspired by https://stackoverflow.com/questions/40316836/update-bashrc-with-virtualenv-info-using-ansible/40317125#40317125
         # The comment also mentions an alternative better solution that uses a `~/.bashrc.d` directory.
         - name: Source Bash completion scripts in `~/.bashrc`
-          blockinfile:
-            dest: '{{ ansible_env.HOME | mandatory }}/.bashrc'
+          ansible.builtin.blockinfile:
+            dest: "{{ ansible_env.HOME | mandatory }}/.bashrc"
             block: |
               for file in /etc/bash_completion.d/* ; do
                   source "$file"
               done
-            marker: '# {mark} ANSIBLE MANAGED BLOCK - bash-completion'
+            marker: "# {mark} ANSIBLE MANAGED BLOCK - bash-completion"
             insertbefore: BOF
-            create: yes
+            create: true
+            mode: "0644"
 
     - name: Upgrades
       block:
         # Inspired by https://wiki.debian.org/UnattendedUpgrades
         # and https://askubuntu.com/questions/1305955/ansible-dpkg-reconfigure-plow-unattended-upgrades-stopped-while-running/1323117#1323117
         - name: Install `unattended-upgrades`
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: unattended-upgrades
             state: present
 
         - name: Install `apt-listchanges`
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: apt-listchanges
             state: present
 
         - name: Configure Debian to auto install security updates
-          become: yes
-          debconf: name=unattended-upgrades question=unattended-upgrades/enable_auto_updates vtype=boolean value='true'
-
+          become: true
+          ansible.builtin.debconf:
+            name: unattended-upgrades
+            question: unattended-upgrades/enable_auto_updates
+            vtype: boolean
+            value: "true"
         - name: Activate unattended upgrades
-          become: yes
-          command:
+          become: true
+          ansible.builtin.command:
             cmd: dpkg-reconfigure --force --frontend=noninteractive unattended-upgrades
             creates: /etc/apt/apt.conf.d/20auto-upgrades
 
     - name: Install GNU Make
-      become: yes
-      package:
+      become: true
+      ansible.builtin.package:
         name: make
         state: present
 
     - name: Hard disk management
       block:
-      - name: Install Small Computer System Interface (SCSI) tools
+        - name: Install Small Computer System Interface (SCSI) tools
         # Provides `rescan-scsi-bus.sh` used by `make scan`.
-        become: yes
-        package:
-          name: scsitools
-          state: present
+          become: true
+          ansible.builtin.package:
+            name: scsitools
+            state: present
 
-      # See https://opensource.com/article/18/11/partition-format-drive-linux
-      - name: Install parted to partition hard disks
-        become: yes
-        package:
-          name: parted
-          state: present
+        # See https://opensource.com/article/18/11/partition-format-drive-linux
+        - name: Install parted to partition hard disks
+          become: true
+          ansible.builtin.package:
+            name: parted
+            state: present
 
-      - name: Install ext2/ext3/ext4 file system utilities to format hard disks
-        become: yes
-        package:
-          name: e2fsprogs
-          state: present
+        - name: Install ext2/ext3/ext4 file system utilities to format hard disks
+          become: true
+          ansible.builtin.package:
+            name: e2fsprogs
+            state: present
 
     - name: Install Apache 2 utils to manage passwords for HTTP Basic Authentication using htpasswd
-      become: yes
-      package:
+      become: true
+      ansible.builtin.package:
         name: apache2-utils
         state: present
 
     - name: Install `moreutils` as it includes `chronic` that we use to cure Cron's chronic email problem
       # For details on the problem see https://habilis.net/cronic/
-      become: yes
-      package:
+      become: true
+      ansible.builtin.package:
         name: moreutils
         state: present
 
@@ -165,15 +183,15 @@
           # by running `echo 'body' | mail -s 'subject' root`, the recipient
           # address is `root@hostname` instead of whatever email address is
           # given in `/etc/aliases` for `root`.
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: mailutils
             state: absent
 
         - name: Install `bsd-mailx` which provides the `mail` command
           # An alternative would be `s-nail`
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: bsd-mailx
             state: present
 
@@ -181,41 +199,41 @@
           # For details see https://wiki.debian.org/msmtp
           # The manual is published under https://marlam.de/msmtp/msmtp.html
           # We do not use `sSMTP` because it is unmaintained according to https://wiki.debian.org/sSMTP
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: msmtp
             state: present
 
         - name: Install `msmtp-mta` to symbolically link `/usr/sbin/sendmail` to `msmtp` that other software can use to send mail
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: msmtp-mta
             state: present
 
         - name: Copy `mail.rc` configuration file
-          become: yes
-          template:
+          become: true
+          ansible.builtin.template:
             src: mail.rc.j2
             dest: /etc/mail.rc
             owner: root
             group: root
-            mode: 0644
+            mode: "0644"
           notify:
             - Send test email as root
             - Send test email as cloud
 
         - name: Copy system-wide `mstprc` configuration file
-          become: yes
+          become: true
           vars:
             # The system-wide logfile must be `/var/log/msmtp` according to
             # msmtp's AppArmor configuration `/etc/apparmor.d/usr.bin.msmtp`
             MSMTP_LOGFILE: /var/log/msmtp
-          template:
+          ansible.builtin.template:
             src: msmtprc.j2
             dest: /etc/msmtprc
             owner: root
             group: root
-            mode: 0644
+            mode: "0644"
           notify: Send test email as root
 
         - name: Copy user-specific `mstprc` configuration file
@@ -223,69 +241,68 @@
             # The user-specific logfile must be `~/.msmtp*.log` according to
             # msmtp's AppArmor configuration `/etc/apparmor.d/usr.bin.msmtp`
             MSMTP_LOGFILE: ~/.msmtp.log
-          template:
+          ansible.builtin.template:
             src: msmtprc.j2
             dest: ~/.msmtprc
-            mode: 0644
+            mode: "0644"
           notify: Send test email as cloud
 
         - name: Copy `aliases` configuration file
-          become: yes
+          become: true
           vars:
             EMAIL_ADDRESS: '{{ lookup("env", "EMAIL_ADDRESS") }}'
-          template:
+          ansible.builtin.template:
             src: aliases.j2
             dest: /etc/aliases
             owner: root
             group: root
-            mode: 0644
+            mode: "0644"
           notify:
             - Send test email as root
             - Send test email as cloud
 
         - name: Flush handlers to send test emails
-          meta: flush_handlers
-
+          ansible.builtin.meta: flush_handlers
     - name: Configure Cron
       block:
         - name: Add paths to environment variable `PATH` for root's crontab
-          become: yes
-          cronvar:
+          become: true
+          community.general.cronvar:
             name: PATH
             value: /usr/local/bin/:/usr/bin:/bin
             state: present
 
         - name: Add paths to environment variable `PATH` for user's crontab
-          cronvar:
+          community.general.cronvar:
             name: PATH
             value: /usr/local/bin/:/usr/bin:/bin
             state: present
 
         - name: Backup database
-          cron:
+          ansible.builtin.cron:
             name: database-backup
             special_time: daily
-            job: 'chronic make --directory=/app/machine backup-database'
+            job: "chronic make --directory=/app/machine backup-database"
 
         - name: Vacuum `journald`
-          become: yes
-          cron:
+          become: true
+          ansible.builtin.cron:
             name: journald-vacuuming
             special_time: daily
-            job: 'chronic make --directory=/app/machine vacuum-journald'
+            job: "chronic make --directory=/app/machine vacuum-journald"
 
         - name: Renew Transport Layer Security (TLS) certificates needed for the `S` in `HTTPS`
-          cron:
+          ansible.builtin.cron:
             name: tls-renewal
             special_time: daily
-            job: 'chronic make --directory=/app/machine renew-tls'
+            job: "chronic make --directory=/app/machine renew-tls"
 
         - name: Set periodic docker system prune
           # See https://docs.docker.com/config/pruning/#prune-everything
-          cron:
+          ansible.builtin.cron:
             name: docker-prune
             special_time: daily
-            job: 'chronic make --directory=/app/machine prune-docker'
+            job: "chronic make --directory=/app/machine prune-docker"
 
     - name: Monitor system with Monit
       # https://mmonit.com/monit/
@@ -302,36 +319,35 @@
       block:
         - name: Add Debian backports
           # https://backports.debian.org/
-          become: yes
-          apt_repository:
+          become: true
+          ansible.builtin.apt_repository:
             repo: deb [arch=amd64] http://deb.debian.org/debian {{ ansible_distribution_release | mandatory }}-backports main
             state: present
 
         - name: Install Monit
-          become: yes
-          package:
+          become: true
+          ansible.builtin.package:
             name: monit
             state: present
 
         - name: Configure Monit
-          become: yes
-          template:
+          become: true
+          ansible.builtin.template:
             src: monitrc.j2
             dest: /etc/monit/monitrc
             owner: root
             group: root
-            mode: 0600
+            mode: "0600"
           notify:
             - Reload Monit
 
         - name: Flush handlers to reload Monit
-          meta: flush_handlers
-
+          ansible.builtin.meta: flush_handlers
     - name: GnuPG
-      become: yes
+      become: true
       block:
         - name: Add GnuPG dependencies
-          package:
+          ansible.builtin.package:
             name:
               - apt-transport-https
               - ca-certificates
@@ -341,18 +357,19 @@
             state: present
 
         - name: Add GnuPG key
-          apt_key:
+          ansible.builtin.apt_key:
             url: https://repos.gnupg.org/deb/gnupg/bookworm/gnupg-signing-key.gpg
             id: 32097B719B3745D6E61DDA1B85C45AE3E1A2B355
             state: present
 
         - name: Add GnuPG repository
-          apt_repository:
-            repo: deb [arch=amd64] https://repos.gnupg.org/deb/gnupg/{{ ansible_distribution_release | mandatory }}/ {{ ansible_distribution_release | mandatory }} main
+          ansible.builtin.apt_repository:
+            repo: deb [arch=amd64] https://repos.gnupg.org/deb/gnupg/{{ ansible_distribution_release | mandatory }}/ {{ ansible_distribution_release | mandatory
+              }} main
             state: present
 
         - name: Install GnuPG
-          package:
+          ansible.builtin.package:
             name:
               # Keep the version in sync with the one in the Dockerfiles of the
               # `database` repository where it is specified in the variable
@@ -362,10 +379,10 @@
 
     - name: Docker
       # Inspired by https://ops.tips/blog/docker-ansible-role/
-      become: yes
+      become: true
       block:
         - name: Add Docker dependencies
-          package:
+          ansible.builtin.package:
             name:
               - apt-transport-https
               - ca-certificates
@@ -375,7 +392,7 @@
             state: present
 
         - name: Add Docker key
-          apt_key:
+          ansible.builtin.apt_key:
             url: https://download.docker.com/linux/debian/gpg
             id: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
             state: present
@@ -383,11 +400,11 @@
         - name: Docker Community Edition
           block:
             - name: Add Docker repository
-              apt_repository:
+              ansible.builtin.apt_repository:
                 repo: deb [arch=amd64] https://download.docker.com/linux/debian {{ ansible_distribution_release | mandatory }} stable
                 state: present
             - name: Docker Engine, containerd, and Docker Compose
-              package:
+              ansible.builtin.package:
                 name:
                   - docker-ce
                   - docker-ce-cli
@@ -398,49 +415,49 @@
         - name: Prepare default daemon configuration
           # For a list of options see
           # https://docs.docker.com/engine/reference/commandline/dockerd/#daemon-configuration-file
-          copy:
+          ansible.builtin.copy:
             src: ./docker-daemon.json
             dest: /etc/docker/daemon.json
+            mode: "0644"
           notify:
             - Restart Docker
 
         - name: Add users to docker group
-          user:
-            name: '{{ item | mandatory }}'
+          ansible.builtin.user:
+            name: "{{ item | mandatory }}"
             groups: docker
-            append: yes
+            append: true
           loop:
             - cloud
 
         - name: Enable Docker systemd service
-          service:
+          ansible.builtin.service:
             name: docker
-            enabled: yes
+            enabled: true
             state: started
 
         - name: Flush handlers to reload Docker
-          meta: flush_handlers
-
+          ansible.builtin.meta: flush_handlers
     - name: OpenTelemetry Collector
-      become: yes
+      become: true
       block:
         - name: Install XZ-format compression utilities (needed to install *.deb packages)
-          package:
+          ansible.builtin.package:
             name: xz-utils
             state: present
 
         - name: Install OpenTelemetry Collector
-          apt:
+          ansible.builtin.apt:
             deb: https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v0.144.0/otelcol-contrib_0.144.0_linux_amd64.deb
 
         - name: Copy OpenTelemetry Collector configuration file
-          become: yes
-          template:
+          become: true
+          ansible.builtin.template:
             src: open-telemetry-collector-config.yml
             dest: /etc/otelcol-contrib/config.yaml
             owner: root
             group: root
-            mode: 0644
+            mode: "0644"
 
         - name: Flush handlers to reload OpenTelemetry Collector
-          meta: flush_handlers
+          ansible.builtin.meta: flush_handlers
