Use `HOST` and `*_SUBDOMAIN` environment variables to construct full domain names

--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,14 @@
+HOST=sample.org
+PRODUCTION_SUBDOMAIN=www
+STAGING_SUBDOMAIN=staging
+TELEMETRY_SUBDOMAIN=telemetry
+
 HTTP_PORT=7000
 HTTPS_PORT=7001
-
 PRODUCTION_HTTP_PORT=8000
-PRODUCTION_HOST=www.sample.org
-NON_WWW_PRODUCTION_HOST=sample.org
-
 STAGING_HTTP_PORT=9000
-STAGING_HOST=staging.sample.org
 
-TELEMETRY_HOST=telemetry.sample.org
-EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
+EXTRA_HOST=
 
 EMAIL_ADDRESS=john.doe@sample.org
 SMTP_HOST=mail.sample.org
