--- a/.env.buildingenvelopedata.sample
+++ b/.env.buildingenvelopedata.sample
@@ -1,14 +1,13 @@
+HOST=buildingenvelopedata.org
+PRODUCTION_SUBDOMAIN=www
+STAGING_SUBDOMAIN=staging
+TELEMETRY_SUBDOMAIN=telemetry
+
 HTTP_PORT=7000
 HTTPS_PORT=7001
-
 PRODUCTION_HTTP_PORT=8000
-PRODUCTION_HOST=www.buildingenvelopedata.org
-NON_WWW_PRODUCTION_HOST=buildingenvelopedata.org
-
 STAGING_HTTP_PORT=9000
-STAGING_HOST=staging.buildingenvelopedata.org
 
-TELEMETRY_HOST=telemetry.buildingenvelopedata.org
 EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
@@ -17,4 +16,4 @@ SMTP_PORT=25
 
 NETWORK_INTERFACE=ens160
 
-MONIT_PASSWORD=
+MONIT_PASSWORD=secret
