--- a/.env.solarbuildingenvelopes.sample
+++ b/.env.solarbuildingenvelopes.sample
@@ -1,15 +1,14 @@
+HOST=solarbuildingenvelopes.com
+PRODUCTION_SUBDOMAIN=www
+STAGING_SUBDOMAIN=staging
+TELEMETRY_SUBDOMAIN=telemetry
+
 HTTP_PORT=7000
 HTTPS_PORT=7001
-
 PRODUCTION_HTTP_PORT=8000
-PRODUCTION_HOST=www.solarbuildingenvelopes.com
-NON_WWW_PRODUCTION_HOST=solarbuildingenvelopes.com
-
 STAGING_HTTP_PORT=9000
-STAGING_HOST=staging.solarbuildingenvelopes.com
 
-TELEMETRY_HOST=telemetry.solarbuildingenvelopes.com
-EXTRA_HOST=192-102-162-39.vm.c.fraunhofer.de
+EXTRA_HOST=192-102-163-92.vm.c.fraunhofer.de
 
 EMAIL_ADDRESS=simon.wacker@ise.fraunhofer.de
 SMTP_HOST=mail-mtaKA26.fraunhofer.de
@@ -17,4 +16,4 @@ SMTP_PORT=25
 
 NETWORK_INTERFACE=ens160
 
-MONIT_PASSWORD=
+MONIT_PASSWORD=secret
