--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -13,8 +13,8 @@ proxy_busy_buffers_size 256k;
 
 client_max_body_size    0;
 
-ssl_certificate /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/${NON_WWW_PRODUCTION_HOST}/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/${HOST}/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/${HOST}/privkey.pem;
 
 ssl_stapling off;
 ssl_stapling_verify on;
@@ -52,14 +52,14 @@ server {
 server {
     listen *:80;
     listen *:443 ssl;
-    server_name ${NON_WWW_PRODUCTION_HOST};
+    server_name ${HOST};
     server_tokens off;
-    return 301 https://${PRODUCTION_HOST}$request_uri;
+    return 301 https://${PRODUCTION_SUBDOMAIN}.${HOST}$request_uri;
 }
 
 server {
     listen *:443 ssl;
-    server_name ${PRODUCTION_HOST};
+    server_name ${PRODUCTION_SUBDOMAIN}.${HOST};
     server_tokens off;
 
     location / {
@@ -83,7 +83,7 @@ server {
 
 server {
     listen *:443 ssl;
-    server_name ${STAGING_HOST};
+    server_name ${STAGING_SUBDOMAIN}.${HOST};
     server_tokens off;
 
     auth_basic "Restricted Area";
@@ -117,12 +117,12 @@ server {
 
 server {
     listen *:443 ssl;
-    server_name ${TELEMETRY_HOST};
+    server_name ${TELEMETRY_SUBDOMAIN}.${HOST};
     server_tokens off;
 
     location / {
         # auth_basic "Restricted Area";
         # auth_basic_user_file /etc/apache2/.htpasswd;
-        proxy_pass http://host.docker.internal:${TELEMETRY_PORT};
+        proxy_pass http://host.docker.internal:${TELEMETRY_HTTP_PORT};
     }
 }
