--- a/.env.sample
+++ b/.env.sample
@@ -7,8 +7,12 @@ HTTP_PORT=7000
 HTTPS_PORT=7001
 PRODUCTION_HTTP_PORT=8000
 STAGING_HTTP_PORT=9000
+TELEMETRY_HTTP_PORT=10000
 
 EXTRA_HOST=
+
+TELEMETRY_DATA_HOST=127.0.0.1
+TELEMETRY_DATA_PORT=10001
 
 EMAIL_ADDRESS=john.doe@sample.org
 SMTP_HOST=mail.sample.org
