--- a/local.yml
+++ b/local.yml
@@ -57,6 +57,8 @@
         - SMTP_PORT
         - NETWORK_INTERFACE
         - MONIT_PASSWORD
+        - TELEMETRY_DATA_HOST
+        - TELEMETRY_DATA_PORT
 
     - name: Update package information
       become: true
@@ -436,10 +438,13 @@
             enabled: true
             state: started
 
-        - name: Flush handlers to reload Docker
+        - name: Flush handlers to restart Docker
           ansible.builtin.meta: flush_handlers
     - name: OpenTelemetry Collector
       become: true
+      vars:
+        TELEMETRY_DATA_HOST: '{{ lookup("env", "TELEMETRY_DATA_HOST") }}'
+        TELEMETRY_DATA_PORT: '{{ lookup("env", "TELEMETRY_DATA_PORT") }}'
       block:
         - name: Install XZ-format compression utilities (needed to install *.deb packages)
           ansible.builtin.package:
@@ -453,11 +458,13 @@
         - name: Copy OpenTelemetry Collector configuration file
           become: true
           ansible.builtin.template:
-            src: open-telemetry-collector-config.yml
+            src: open-telemetry-collector-config.yml.j2
             dest: /etc/otelcol-contrib/config.yaml
             owner: root
             group: root
             mode: "0644"
+          notify:
+            - Reload OpenTelemetry Collector
 
         - name: Flush handlers to reload OpenTelemetry Collector
           ansible.builtin.meta: flush_handlers
